# kitra

./: .gitignore  CMakeLists.txt  CODE_NAVIGATION.md  CONTRIBUTING.md  Doxyfile  GETTING_STARTED.md  Makefile  README.md  SECURITY.md  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: CinderConfig.cmake.in  KitraConfig.cmake.in  cinder.pc.in  cinder_math.pc.in  kitra.pc.in  kitra_math.pc.in
docs-config/: header.html
examples/pendulum/: pendulum.c
examples/pong/: pong.c
examples/snake/: snake.c
include/: cinder.h  cinder_audio.h  cinder_blend.h  cinder_color.h  cinder_compiler.h  cinder_draw.h  cinder_error.h  cinder_input.h  cinder_loop.h  cinder_math.h  cinder_plugin.h  cinder_rng.h  cinder_status.h  cinder_subsystem.h  cinder_text.h  cinder_texture.h  cinder_timer.h  cinder_types.h  cinder_window.h  kitra.h  kitra_audio.h  kitra_blend.h  kitra_color.h  kitra_draw.h  kitra_input.h  kitra_math.h  kitra_plugin.h  kitra_rng.h  kitra_status.h  kitra_subsystem.h  kitra_text.h  kitra_texture.h  kitra_timer.h  kitra_types.h  kitra_window.h
include/kitra/: kitra_dialog.h  kitra_error.h  kitra_loop.h  kitra_rng.h  kitra_surface.h  kitra_timer.h
src/: cinder.c  cinder_audio.c  cinder_blend.c  cinder_color.c  cinder_draw.c  cinder_error.c  cinder_input.c  cinder_internal.h  cinder_loop.c  cinder_plugin.c  cinder_rng.c  cinder_subsystem.c  cinder_text.c  cinder_texture.c  cinder_timer.c  cinder_window.c  kitra_audio.c  kitra_blend.c  kitra_color.c  kitra_dialog.c  kitra_draw.c  kitra_error.c  kitra_input.c  kitra_internal.h  kitra_loop.c  kitra_plugin.c  kitra_rng.c  kitra_subsystem.c  kitra_surface.c  kitra_text.c  kitra_texture.c  kitra_timer.c  kitra_window.c  main.c  pong.c  snake.c
